# kali-mcp

./: .gitignore  .mcp.json  CLAUDE.md  Claude.md  README.md  context.py  executor.py  findings.py  kali-mcp.spec  pyproject.toml  scope.py  scope.yaml  server.py
parsers/: enum4linux.py  ffuf.py  gobuster.py  hydra.py  john.py  nikto.py  nmap.py  sqlmap.py
tests/: test_executor.py  test_findings.py  test_integration.py  test_parsers.py  test_scope.py
tests/fixtures/: enum4linux_output.txt  ffuf_output.json  gobuster_output.txt  hydra_output.txt  john_output.txt  nikto_output.txt  nmap_output.xml  sqlmap_output.txt
tools/: _utils.py  creds.py  exploit.py  generic.py  recon.py  session.py  web.py
