[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kali-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-mock>=3.14"]

[tool.hatch.build.targets.wheel]
packages = ["parsers", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
